# web-terminal

./: .env  .env.example  .gitignore  CLAUDE.md  Cargo.toml  README.md  build.rs  config.toml.example  deny.toml  pr  rust-toolchain.toml
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: ci-frontend.yml  ci-integration.yml  ci-rust.yml  release.yml  security.yml
.zap/: rules.tsv
benches/: BENCHMARK_STATUS.md  QUICK_START.md  README.md  command_execution.rs  concurrent_load.rs  session_creation.rs  websocket_throughput.rs
config/: auth.yaml  config.toml.example  permissions.yaml  production.toml  staging.toml
config/certs/: README.md
docs/: BUILD.md  SPEC_KIT_SECURITY_UPDATE_SUMMARY.md  TESTING_SUMMARY.md  architecture.md  claude-flow-prompts.md  dependencies-research.md  security-audit-authentication.md  security-audit-layer1-network.md  single-port-audit.md  single-port-fixes-applied.md  test-strategy.md
docs/analysis/: compliance-report.md
docs/api/: openapi.yaml
docs/research/: github-actions-research-2025.md
docs/security/: EXECUTIVE_SUMMARY.txt  JWT_AUTHENTICATION.md  LAYER3_AUDIT_SUMMARY.md  QUICK_REFERENCE.md  README.md  REMEDIATION_PLAN.md  SECURITY_AUDIT_REPORT.md  VULNERABILITY_ASSESSMENT.md  command-validator-reference.rs  layer3-input-validation-audit.md  path-traversal-fix.patch
docs/security-audits/: layer4-sandbox-isolation-audit.md
docs/spec-kit/: 000-overview.md  001-requirements.md  002-architecture.md  003-backend-spec.md  004-frontend-spec.md  005-cli-spec.md  006-api-spec.md  007-websocket-spec.md  008-testing-spec.md  009-deployment-spec.md  010-documentation-spec.md  011-authentication-spec.md  012-data-storage-decision.md  012-security-implementation.md  README.md
frontend/: .eslintrc.json  .npmrc  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/playwright-report/: index.html  results.json
frontend/tests/: setup.ts
scripts/: deploy.sh  dev.sh  docker-build.sh  setup-github-secrets.sh  setup-repo-secrets.sh  watch.sh
src/: error.rs  lib.rs  main.rs
src/cli/: args.rs  mod.rs
src/config/: auth.rs  mod.rs  server.rs
src/execution/: mod.rs  process.rs
src/filesystem/: mod.rs
src/handlers/: api_health.rs  api_sessions.rs  api_types.rs  mod.rs  sessions.rs
src/monitoring/: mod.rs
src/protocol/: messages.rs  mod.rs
src/pty/: config.rs  io_handler.rs  manager.rs  mod.rs  process.rs
src/security/: auth.rs  authorization.rs  jwks.rs  jwks_client.rs  jwt_validator.rs  mod.rs
src/server/: http.rs  middleware.rs  mod.rs  tls.rs  websocket.rs
src/session/: manager.rs  mod.rs  registry.rs  state.rs
tests/: README.md  TESTING_SUMMARY.md  TEST_REPORT.md  auth_middleware.rs  cli_tests.rs  integration_tests.rs  pty_integration_test.rs  pty_tests.rs  security_tests.rs  unit_tests.rs
tests/benchmarks/: mod.rs
tests/integration/: api_endpoints_test.rs  auth_flow_test.rs  authorization_test.rs  concurrent_sessions_test.rs  error_recovery_test.rs  file_operations_test.rs  mod.rs  rate_limit_test.rs  terminal_session_test.rs  tls_test.rs  websocket_test.rs
tests/security/: authorization_bypass_test.rs  input_validation_exploit_test.rs  input_validation_test.rs  jwt_security_test.rs  jwt_validation_test.rs  rate_limit_bypass_test.rs  tls_security_test.rs
tests/unit/: auth_test.rs  config_test.rs  error_test.rs  execution_test.rs  mod.rs  protocol_test.rs  pty_manager_test.rs  (+1 more)
xtask/: Cargo.toml
(+37 files in other folders)
