[package]
name = "web-terminal"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
actix-web-actors = "4"
actix-files = "0.6"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dashmap = "5"
jsonwebtoken = "9"
config = "0.14"
anyhow = "1"
thiserror = "1"
