[package]
name = "web-terminal"
version = "0.1.0"
edition = "2021"
authors = ["Liam Helmer"]
description = "Browser-based terminal emulator with WASM execution"
readme = "README.md"
license = "MIT"
repository = "https://github.com/liamhelmer/web-terminal"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Web framework (per spec-kit/003-backend-spec.md)
actix = "0.13"
actix-web = "4.11"
actix-web-actors = "4.3"
actix-files = "0.6"
actix-cors = "0.7"

# Async runtime (per spec-kit/003-backend-spec.md)
tokio = { version = "1.47", features = ["full", "tracing"] }
futures-util = "0.3"

# Serialization (per spec-kit/003-backend-spec.md)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging and tracing (per spec-kit/003-backend-spec.md)
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-actix-web = "0.7"

# Concurrency (per spec-kit/003-backend-spec.md - Session management with DashMap)
dashmap = "6.1"

# Authentication (per spec-kit/003-backend-spec.md)
jsonwebtoken = "9"
argon2 = "0.5"  # Password hashing

# CLI argument parsing (per spec-kit/005-cli-spec.md)
clap = { version = "4", features = ["derive", "env", "wrap_help", "cargo"] }
clap_complete = "4"
num_cpus = "1"

# Configuration (per spec-kit/003-backend-spec.md)
config = "0.14"
toml = "0.8"

# Error handling (per spec-kit/003-backend-spec.md)
anyhow = "1"
thiserror = "1"

# Command execution (per spec-kit/003-backend-spec.md)
shell-words = "1"

# Metrics (per spec-kit/003-backend-spec.md - Prometheus integration)
prometheus = "0.14"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# UUID generation for session IDs
uuid = { version = "1", features = ["v4", "serde"] }

# TLS support (optional, per spec-kit/003-backend-spec.md)
rustls = { version = "0.23", optional = true }
rustls-pemfile = { version = "2", optional = true }

# Byte buffer management (per spec-kit/003-backend-spec.md - zero-copy optimization)
bytes = "1"

# PTY support (per spec-kit/003-backend-spec.md section 3)
portable-pty = "0.9"

# Humantime for duration serialization
humantime-serde = "1"

[build-dependencies]
# Build script dependencies
chrono = "0.4"

[dev-dependencies]
# Testing (per spec-kit/008-testing-spec.md)
mockall = "0.13"       # Mocking for tests
tempfile = "3"         # Temporary directories for tests
criterion = "0.5"      # Benchmarking
assert_cmd = "2"       # CLI testing
predicates = "3"       # Assertions for tests

[features]
default = []
tls = ["rustls", "rustls-pemfile"]

# Build optimization (per spec-kit/009-deployment-spec.md)
[profile.release]
opt-level = 3         # Maximum optimization
lto = true            # Link-time optimization
codegen-units = 1     # Single codegen unit for better optimization
strip = true          # Strip symbols for smaller binary
panic = 'abort'       # Abort on panic (smaller binary)
